agregue un lorem

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         veritatis eveniet voluptatum deleniti tempore perferendis illo, quisquam
         eum alias, iste neque. Fugiat suscipit maiores asperiores odit.
         Distinctio reprehenderit perferendis minus.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero quibusdam nihil velit dolor deserunt at explicabo ipsam vero aliquam ipsa officiis placeat natus rerum, eius doloremque excepturi, inventore cupiditate dicta?
         <!-- Descripcion de que es lo que hacemos en la empresa -->
       </p>
     </section>
