agregue un lorem

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <section class="section1 animacion">
       <h1 class="outboxh1">What is OutBox?</h1>
       <p class="outboxp1">
-        
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae aliquam totam ducimus, veritatis veniam sed soluta minus autem aspernatur nulla! Itaque nam perferendis cupiditate ipsum magnam, repellendus sapiente laudantium illum.
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero quibusdam nihil velit dolor deserunt at explicabo ipsam vero aliquam ipsa officiis placeat natus rerum, eius doloremque excepturi, inventore cupiditate dicta?
         <!-- Descripcion de que es lo que hacemos en la empresa -->
       </p>
